samples/_failures_safe/1761504625_3f2d8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10f78e04.c: In function ‘handle_event’:
./samples/SAFE/__tmp_10f78e04.c:151:13: error: expected expression at end of input
  151 |             return process_error_state(sm,
      |             ^~~~~~
./samples/SAFE/__tmp_10f78e04.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_10f78e04.c:151:13: error: expected declaration or statement at end of input
